# serperior

./: .gitignore  DOCKER_GUIDE.md  LICENSE  PROFESSIONAL_DOCKER_GUIDE.md  README.md  docker-compose.yml  models.txt  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  temp_reqs.txt
backend/examples/: README.md  dashboard.html  test_api.py  test_vector_db.py  usage_examples.py
backend/scripts/: test_import.py
backend/serperior/: __init__.py
backend/serperior/api/: __init__.py  analyzer.py  api.py  base_crawler.py  dantri_crawler.py  extractor.py  vector_db.py
backend/serperior/rag/: llm_client.py  rag_service.py
backend/tests/: check_chat.py  clear_db.py  debug_db.py  list_models.py  test_full_rag.py  test_gemini_direct.py  test_key.py  test_optimization.py  test_rag_service.py
frontend/src/: ChatInterface.jsx  Dashboard.jsx
serperior/serperior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/serperior/: __init__.py  async_crawler.py  base_crawler.py  crawl_pipeline.py  dantri_crawler.py
src/serperior.egg-info/: top_level.txt
